Mise à jour du README et autres fichiers

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -20,7 +20,8 @@
             <td th:text="${p.price}"></td>
             <td th:text="${p.quantity}"></td>
         <td>
-            <a onclick="return confirm('etes vous sure ?')" class="btn btn-danger" th:href="@{/delete(id=${p.id})}">Delete</a>
+            <a onclick="return confirm('etes vous sure ?')" class="btn btn-danger"
+               th:href="@{/delete(id=${p.id})}">Delete</a>
         </td>
         </tr>
         </tbody>
